Fixed translations and spacing for combo test render

--- a/hktm/static/questions.css
+++ b/hktm/static/questions.css
@@ -123,6 +123,8 @@
 .kanji_bonus{
   border-right: 1px black dashed;
   width: 50px;
+  margin-left: 6px;
+  font-size: 90%;
 }
 
 
